# CardamomOT

./: .gitignore  CLI_ARCHITECTURE.md  DEVELOPER_GUIDE.md  DOCUMENTATION_INDEX.md  INSTALL_GUIDE.md  NAMING_CORRECTIONS.md  PIPELINE_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_CORRECTIONS.md  VERIFICATION_CHECKLIST.md  VERIFICATION_README.md  check_KOV_to_sim.py  check_mixture_to_data.py  check_sim_to_data.py  check_test_to_train.py  config_template.yaml  get_kinetic_rates.py  infer_mixture.py  infer_network_simul.py  infer_network_structure.py  infer_rd.py  infer_test.py  prepare_reference_network.py  pyproject.toml  run.sh  run_pipeline.sh  select_DEgenes_and_split.py  setup.py  simulate_network.py  simulate_network_KOV.py
CardamomOT/: __init__.py  cli.py  cli_pipeline.py  config.py  logging.py
CardamomOT/inference/: __init__.py  degradations.py  mixture.py  network.py  network_final.py  pretreatment.py  simulations.py  trajectory.py
CardamomOT/inference/__pycache__/: network.base_kon-114.py312.1.nbc  network.base_kon-114.py312.2.nbc  network.base_kon-114.py312.nbi  network.base_kon-115.py312.1.nbc  network.base_kon-115.py312.2.nbc  network.base_kon-115.py312.nbi  network.base_kon-116.py312.1.nbc  network.base_kon-116.py312.2.nbc  network.base_kon-116.py312.nbi  network.base_kon-117.py312.1.nbc  network.base_kon-117.py312.2.nbc  network.base_kon-117.py312.nbi  network.base_kon-118.py312.1.nbc  network.base_kon-118.py312.2.nbc  network.base_kon-118.py312.nbi  network.base_kon-119.py312.1.nbc  network.base_kon-119.py312.2.nbc  (+255 more)
CardamomOT/model/: base.py
CardamomOT/tools/: __init__.py  characterize_cell_type.py  marginals.py  umap.py  visualize_network.py
experimental_datasets/Semrau/: cell_signature_scores.csv  pipeline.ipynb
results_article/Benchmark_on_simulated_data/: environment.yml  figure2_deg.py  figure3.py  figure4.py  figure5.py  figure5_traj.py  figure7.py  figureS7.py  figure_2.ipynb  figure_6.ipynb  figure_sup1-3.ipynb  infer_CARDAMOM1.py  infer_CARDAMOM2.py  infer_CARDAMOM2_deg.py  infer_CARDAMOM2_degmult16.py  infer_CARDAMOM2_degmult2.py  infer_CARDAMOM2_degmult4.py  infer_CARDAMOM2_degmult8.py  infer_CARDAMOM2_degover16.py  infer_CARDAMOM2_degover2.py  infer_CARDAMOM2_degover4.py  infer_CARDAMOM2_degover8.py  infer_CARDAMOM2_noloop.py  infer_CARDAMOM2_random.py  infer_CARDAMOM2_randomnoloop.py  infer_GENIE3.py  infer_reference_fitting.py  reference_fitting.yml  run_inference.sh  run_trajectories.sh  simulate_data_FN8.py
utils/: assign_time.ipynb  compare_cell_types.ipynb  compare_cell_types_across_KOV.ipynb  plot_data_to_sim_KOV.ipynb  prop_df
utils/old_to_new/: add_degradations_to_ad.py  convert_old_data_to_ad.py
(+1590 files in other folders)
