[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "CardamomOT"
version = "2.0.0"
description = "Joint gene regulatory network and trajectory inference from temporal snapshots of scRNAseq data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Elias Ventre"}
]
keywords = ["bioinformatics", "scRNA-seq", "gene-regulatory-networks", "inference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.19",
    "scipy>=1.5",
    "numba>=0.51",
    "anndata>=0.7",
    "scikit-learn>=0.23",
    "matplotlib>=3.3",
    "pandas>=1.1",
    "umap-learn>=0.5",
    "alive-progress>=2.0",
    # "harissa==3.0.7",  # Temporarily disabled due to build issues
    "torch>=1.9",
    "torchdiffeq>=0.2",
    "joblib>=1.0",
]

[project.scripts]
cardamomot = "CardamomOT.cli:main"

[project.optional-dependencies]
cli = [
    "questionary>=1.10",
    "pyyaml>=5.4",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=21.0",
    "flake8>=3.9",
    "isort>=5.9",
    "sphinx>=4.0",
]
notebooks = [
    "jupyter>=1.0",
    "notebook>=6.0",
    "ipython>=7.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/CardaSC"
Documentation = "https://github.com/yourusername/CardaSC"
"Bug Tracker" = "https://github.com/yourusername/CardaSC/issues"
"Source Code" = "https://github.com/yourusername/CardaSC"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["CardamomOT"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
